# functional-quiz-game

./: Makefile  Take_It_Caml_Quiz.opam  dune-project  readme.md
lib/: QuizLib.ml  dune  winners.txt
lib/login/: logging.ml  logging.mli  users.txt
lib/quiz_files_handler/: get_quiz_file.ml  get_quiz_file.mli  read_quiz_from_file.ml  read_quiz_from_file.mli
proj_test/: login_data.txt  main.ml  output.txt
quizes/: Historia_Polski.cqf  OCaml.cqf
